[gd_scene load_steps=3 format=3 uid="uid://d0jm9l1k2p3o4n5q6"]

[ext_resource type="Script" path="res://scripts/dashboard/components/news_feed.gd" id="1_news_feed"]
[ext_resource type="Theme" path="res://resources/ui/dashboard_theme.tres" id="2_theme"]

[node name="NewsFeed" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource("2_theme")
script = ExtResource("1_news_feed")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="HeaderContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="VBoxContainer/HeaderContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "News Feed"

[node name="UrgentFilter" type="CheckBox" parent="VBoxContainer/HeaderContainer"]
layout_mode = 2
text = "Urgent Only"

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3